# src/main/java/ch/sbb/polarion/extension/test_data/rest/controller/TestDataApiController.java
@@ -4,12 +4,11 @@ import ch.sbb.polarion.extension.generic.rest.filter.Secured;
 import ch.sbb.polarion.extension.test_data.rest.model.CollectionRequest;
 import ch.sbb.polarion.extension.test_data.rest.model.CrossDocumentLinksRequest;
 import ch.sbb.polarion.extension.test_data.rest.model.LinkedRevisionsRequest;
+import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 
 import jakarta.inject.Singleton;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.Response;
-
-import java.io.InputStream;
 
 @Singleton
 @Secured
@@ -32,7 +31,7 @@ public class TestDataApiController extends TestDataInternalController {
     }
 
     @Override
-    public Response saveProjectTemplate(String templateId, String templateHash, InputStream file) {
+    public Response saveProjectTemplate(String templateId, String templateHash, FormDataBodyPart file) {
         return polarionService.callPrivileged(() -> super.saveProjectTemplate(templateId, templateHash, file));
     }
 
